# gmock_c_test

./: CMakeLists.txt  README.md  gmock_c_test.cpp  net_interface.h  net_interface_mock.cpp  net_interface_mock.h  netlink.c  netlink.h
